home route, add new book, feedback form done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     </div>
     <div>
       <button class="text-base text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg px-4 py-2 text-center dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">Explore Now</button>
-      <p class="pt-3 text-sm tracking-widest font-semibold">Alrady have register click - <a class="text-purple-700 hover:text-purple-500" href="/login">Sign in</a></p>
+      <p class="pt-3 text-sm tracking-widest font-semibold">Please send your feedback - <a class="text-purple-700 hover:text-purple-500" href="/feedback">click here</a></p>
     </div>
 
   </div>
