--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,19 @@
 <%- include("partials/header") %>
 <%- include("partials/nav") %>
+<div class="bg-[url('/images/bg.webp')] bg-cover">
 
+    
 <div class="flex items-center justify-center">
     <h1 class="mt-10 py-2 text-4xl font-semibold border-b-[3px] border-purple-600">Add New Book</h1>
 </div>
 
-<div class="flex items-center justify-center">
+<div class="flex items-center justify-around px-[10vw]">
     
-    <div class="max-w-screen-xl flex flex-col mt-10 flex-wrap items-center justify-between mx-auto p-4">
+    <div class="max-w-screen-xl flex flex-col mt-10 flex-wrap items-center justify-between p-4">
 
         <form class="flex flex-col items-center gap-5" action="/register" method="post">
             <div class="flex flex-col gap-2 font-semibold">
-                <label>Poster</label>
+                <label class="text-gray-600">Poster</label>
                 <input class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700" type="text" placeholder="Past poster URL" name="poster">
             </div>
             <div class="flex flex-col gap-2 font-semibold">
@@ -44,10 +46,12 @@
     </div>
 
     <div>
-        <img class="h-[40vw]" src="images/about-img.png" alt="">
+        <img class="h-[50vw]" src="images/addbook.png" alt="">
     </div>
 
 </div>
 
+
+</div>
 
 <%- include("partials/footer") %>
