--- a/views/library.ejs
+++ b/views/library.ejs
@@ -1,15 +1,122 @@
 <%- include("partials/header") %>
-<%- include("partials/nav") %>
+    <%- include("partials/nav") %>
 
-<div class="flex items-center justify-center">
-    <h1 class="mt-10 py-2 text-4xl font-semibold border-b-[3px] border-purple-600">All Books</h1>
-</div>
+        <div class="flex items-center justify-center">
+            <h1 class="mt-10 py-2 text-4xl font-semibold border-b-[3px] border-purple-600">All Books</h1>
+        </div>
 
-<div class="max-w-screen-xl flex flex-col mt-10 flex-wrap items-center justify-between mx-auto p-4">
+        <div class="max-w-screen-xl flex gap-20 mt-10 flex-wrap items-center justify-start mx-auto p-4">
 
-    <h1>hiiiii</h1>
+            <div class="w-[22rem] h-[30rem] rounded border-2">
+                <div
+                    class="text-center font-semibold text-white flex flex-col items-center justify-between  h-[26rem] bg-[url('/images/poster1.avif')] bg-cover rounded">
+                    <div class="p-5">
+                        <p class="text-yellow-200">"Its Most Viral"</p>
+                        <h1 class="text-4xl pt-20 ">'WOMAN'</h1>
+                    </div>
+                    <div class="flex flex-col items-center text-center bg-gray-700">
+                        <h3>-B.D Khatry</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ad perspiciatis laudantium
+                            culpa, est quia.</p>
+                    </div>
+                    <div class="flex items-center justify-between w-full">
+                        <p class="bg-gray-700 px-2 text-yellow-200">ISBN: 11D55SK648</p>
+                        <p class="bg-red-800 px-2 text-yellow-200">Rs. 169/-</p>
+                    </div>
+                </div>
+                <div class="px-2 flex items-center justify-between">
+                    <div>
+                        <h1 class="text-lg font-semibold">Women</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div>
+                        <a class="text-white rounded px-2 text-2sm py-1 bg-gray-500" href="#">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="w-[22rem] h-[30rem] rounded border-2">
+                <div
+                    class="text-center font-semibold text-white flex flex-col items-center justify-between  h-[26rem] bg-[url('/images/poster1.avif')] bg-cover rounded">
+                    <div class="p-5">
+                        <p class="text-yellow-200">"Its Most Viral"</p>
+                        <h1 class="text-4xl pt-20 ">'WOMAN'</h1>
+                    </div>
+                    <div class="flex flex-col items-center text-center bg-gray-700">
+                        <h3>-B.D Khatry</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ad perspiciatis laudantium
+                            culpa, est quia.</p>
+                    </div>
+                    <div class="flex items-center justify-between w-full">
+                        <p class="bg-gray-700 px-2 text-yellow-200">ISBN: 11D55SK648</p>
+                        <p class="bg-red-800 px-2 text-yellow-200">Rs. 169/-</p>
+                    </div>
+                </div>
+                <div class="px-2 flex items-center justify-between">
+                    <div>
+                        <h1 class="text-lg font-semibold">Women</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div>
+                        <a class="text-white rounded px-2 text-2sm py-1 bg-gray-500" href="#">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="w-[22rem] h-[30rem] rounded border-2">
+                <div
+                    class="text-center font-semibold text-white flex flex-col items-center justify-between  h-[26rem] bg-[url('/images/poster1.avif')] bg-cover rounded">
+                    <div class="p-5">
+                        <p class="text-yellow-200">"Its Most Viral"</p>
+                        <h1 class="text-4xl pt-20 ">'WOMAN'</h1>
+                    </div>
+                    <div class="flex flex-col items-center text-center bg-gray-700">
+                        <h3>-B.D Khatry</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ad perspiciatis laudantium
+                            culpa, est quia.</p>
+                    </div>
+                    <div class="flex items-center justify-between w-full">
+                        <p class="bg-gray-700 px-2 text-yellow-200">ISBN: 11D55SK648</p>
+                        <p class="bg-red-800 px-2 text-yellow-200">Rs. 169/-</p>
+                    </div>
+                </div>
+                <div class="px-2 flex items-center justify-between">
+                    <div>
+                        <h1 class="text-lg font-semibold">Women</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div>
+                        <a class="text-white rounded px-2 text-2sm py-1 bg-gray-500" href="#">Buy</a>
+                    </div>
+                </div>
+            </div>
+            <div class="w-[22rem] h-[30rem] rounded border-2">
+                <div
+                    class="text-center font-semibold text-white flex flex-col items-center justify-between  h-[26rem] bg-[url('/images/poster1.avif')] bg-cover rounded">
+                    <div class="p-5">
+                        <p class="text-yellow-200">"Its Most Viral"</p>
+                        <h1 class="text-4xl pt-20 ">'WOMAN'</h1>
+                    </div>
+                    <div class="flex flex-col items-center text-center bg-gray-700">
+                        <h3>-B.D Khatry</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ad perspiciatis laudantium
+                            culpa, est quia.</p>
+                    </div>
+                    <div class="flex items-center justify-between w-full">
+                        <p class="bg-gray-700 px-2 text-yellow-200">ISBN: 11D55SK648</p>
+                        <p class="bg-red-800 px-2 text-yellow-200">Rs. 169/-</p>
+                    </div>
+                </div>
+                <div class="px-2 flex items-center justify-between">
+                    <div>
+                        <h1 class="text-lg font-semibold">Women</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div>
+                        <a class="text-white rounded px-2 text-2sm py-1 bg-gray-500" href="#">Buy</a>
+                    </div>
+                </div>
+            </div>
 
-</div>
+        </div>
 
 
-<%- include("partials/footer") %>
+        <%- include("partials/footer") %>
