--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,33 @@
 <%- include("partials/header") %>
-<%- include("partials/nav") %>
+  <%- include("partials/nav") %>
 
-<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
-  <div class="w-[50%] flex flex-col flex-wrap items-start gap-10">
+        <div class="w-[50%] flex flex-col flex-wrap items-start gap-10">
 
-    <div class="text-xs font-bold text-purple-700 tracking-widest"><p>WELCOME TO THE WORLD OF BOOK</p></div>
-    <div class="flex flex-col gap-5">
-      <h1 class="text-5xl font-medium text-gray-700 leading-normal">Explore The Wonderfull Books Collection</h1>
-      <p class="font-medium text-gray-500">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad omnis, sint repellat veniam voluptatibus dolore magni? Necessitatibus minima rerum saepe fugiat dignissimos veniam. Inventore fugiat temporibus suscipit dicta aspernatur similique.</p>
-    </div>
-    <div>
-      <button class="text-base text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg px-4 py-2 text-center dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">Explore Now</button>
-      <p class="pt-3 text-sm tracking-widest font-semibold">Please send your feedback - <a class="text-purple-700 hover:text-purple-500" href="/feedback">click here</a></p>
-    </div>
+          <div class="text-xs font-bold text-purple-700 tracking-widest">
+            <p>WELCOME TO THE WORLD OF BOOK</p>
+          </div>
+          <div class="flex flex-col gap-5">
+            <h1 class="text-5xl font-medium text-gray-700 leading-normal">Explore The Wonderfull Books Collection</h1>
+            <p class="font-medium text-gray-500">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad omnis,
+              sint repellat veniam voluptatibus dolore magni? Necessitatibus minima rerum saepe fugiat dignissimos
+              veniam. Inventore fugiat temporibus suscipit dicta aspernatur similique.</p>
+          </div>
+          <div>
+            <button
+              class="text-base text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg px-4 py-2 text-center dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800">Explore
+              Now</button>
+            <p class="pt-3 text-sm tracking-widest font-semibold">Please send your feedback - <a
+                class="text-purple-700 hover:text-purple-500" href="/feedback">click here</a></p>
+          </div>
 
-  </div>
+        </div>
 
-  <div class="w-[50%] ">
-    <img src="/images/about-img.png" alt="">
-  </div>
-</div>
+        <div class="w-[50%] ">
+          <img src="/images/about-img.png" alt="">
+        </div>
+      </div>
 
 
-<%- include("partials/footer") %>
+    <%- include("partials/footer") %>
