--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,32 @@
 
+<footer class="bg-gray-200 mt-20">
+    <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <a href="/" class="flex items-center space-x-0 rtl:space-x-reverse">
+                <img class="w-[3vw]" src="/images/bookLogo.png" class="h-8" alt="Logo" />
+                <span class="self-center text-2xl font-semibold whitespace-nowrap text-purple-700">Book<span
+                        class="text-gray-700">/Store</span></span>
+            </a>
+            <ul class="flex flex-wrap items-center mb-6 text-sm font-base text-gray-900 sm:mb-0 dark:text-gray-800">
+                <li>
+                    <a href="/about" class="hover:underline me-4 md:me-6">About</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                </li>
+                <li>
+                    <a href="/about" class="hover:underline">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <hr class=" my-6 border-gray-800 dark:border-gray-700 " />
+        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-800">© 2023 <a href="/" class="hover:underline">Book/Store™</a>. All Rights Reserved.</span>
+    </div>
+</footer>
+
   
 </body>
 </html>
