--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,44 +11,44 @@
             <div class="max-w-screen-xl flex flex-col mt-10 flex-wrap items-center justify-between p-4">
 
                 <form class="flex flex-col items-center gap-5" action="/register" method="post">
-                    <div class="flex flex-col gap-2 font-semibold">
+                    <div class="flex flex-col gap-2 ">
                         <label class="text-gray-600">Poster</label>
                         <input
                             class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700"
                             type="text" placeholder="Past poster URL" name="poster">
                     </div>
-                    <div class="flex flex-col gap-2 font-semibold">
+                    <div class="flex flex-col gap-2 ">
                         <label class="text-gray-600">Title Of The Book</label>
                         <input
                             class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700"
-                            type="text" placeholder="Past poster URL" name="booktitle">
+                            type="text" placeholder="Title of the book" name="booktitle">
                     </div>
-                    <div class="flex flex-col gap-2 font-semibold">
+                    <div class="flex flex-col gap-2 ">
                         <label>Book name</label>
                         <input
                             class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700"
                             type="text" placeholder="Enter book name" name="bookname">
                     </div>
-                    <div class="flex flex-col gap-2 font-semibold">
+                    <div class="flex flex-col gap-2 ">
                         <label>Author name</label>
                         <input
                             class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700"
                             type="text" placeholder="Enter author name" name="authorname">
                     </div>
-                    <div class="flex flex-col gap-2 font-semibold">
+                    <div class="flex flex-col gap-2 ">
                         <label>Book ISBN No.</label>
                         <input
                             class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700"
                             type="text" placeholder="Ex-12d34j54n3" name="isbn">
                     </div>
-                    <div class="flex flex-col gap-2 font-semibold">
+                    <div class="flex flex-col gap-2 ">
                         <label>Price</label>
                         <input
                             class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700"
                             type="text" placeholder="Enter book amount" name="price">
                     </div>
 
-                    <div class="flex flex-col gap-2 font-semibold">
+                    <div class="flex flex-col gap-2 ">
                         <label>Description</label>
                         <textarea
                             class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700"
