adding multer.js

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,7 +10,7 @@
 
       <div class="rounded w-[50%] h-[100vh] border-2">
         <div
-          class="h-[100%] text-center font-semibold text-white flex flex-col items-center justify-between  bg-[url(<%=book.poster %>)] bg-cover rounded">
+          class="h-[100%] text-center font-semibold text-white flex flex-col items-center justify-between  bg-[url(/images/<%=book.poster %>)] bg-cover rounded">
           <div class="p-5">
             <p class="text-yellow-200 bg-gray-700">"<%= book.booktitle%>"</p>
             <h1 class="text-4xl mt-20 bg-gray-200 text-black">'<%= book.bookname%>'</h1>
