--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,14 +11,15 @@
     <img class="h-[20vw]" src="/images/about.png" alt="">
     <p class="p-4 m-4 w-[50vw]">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem asperiores excepturi eveniet illo voluptate similique eligendi, libero molestias inventore. Nihil.</p>
     
-    <form class="flex flex-col items-center gap-5" action="/register" method="post">
+    <form class="flex flex-col items-center gap-5" action="/sendmail" method="post">
+        <h1 class="mt-10 py-2 text-4xl font-semibold border-b-[3px] border-purple-600">Join Us</h1>
         <div class="flex flex-col gap-3 font-semibold">
             <label>Name</label>
             <input class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700" type="text" placeholder="Enter your name" name="name">
         </div>
         <div class="flex flex-col gap-3 font-semibold">
-            <label>Email</label>
-            <input class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700" type="text" placeholder="Enter your email address" name="email">
+            <label>Gmail</label>
+            <input class="w-[30vw] border-2 px-4 py-2 rounded focus:outline-none focus:ring-0 focus:border-purple-700" type="email" placeholder="Enter your email address" name="gmail">
         </div>
 
         <div>
